--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="assets/img/avatar.png" alt="" class="img-fluid"></a>
       <!-- Uncomment below if you prefer to use an text logo -->
       <!-- <h1 class="logo"><a href="index.html">Folio</a></h1> -->
 
@@ -50,25 +50,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link  scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link  scrollto" href="#journal">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link  scrollto" href="#experience">Experience</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -81,14 +63,13 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>I'm <span class="typed" data-typed-items="Alex Smith, Designer, Developer, Freelancer, Photographer"></span></h1>
-        <p>Designer, Developer, Freelancer, Photographer</p>
+        <h1>I'm <span class="typed" data-typed-items="Sue Pearson, an Educator, an Innovator, an Industry Relationship Manager, a Presenter"></span></h1>
+        <p>Educator, Innovator, Industry Relationship Manager, Presenter</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-          <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://www.canva.com/design/DAGIMkujVrQ/fSAXsdQXqpKu0s0yz0V4Hw/view?utm_content=DAGIMkujVrQ&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank"><i class="bi bi-file-person-fill"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/suepearson-nz/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://github.com/suepearson-nz" target="_blank"><i class="bi bi-github"></i></a></li>	
         </ul>
       </div>
     </div>
@@ -112,8 +93,8 @@
           <div class="col-lg-7">
             <div class="about-descr">
 
-              <p class="p-heading">im a ux /ui designer austin based who loves clean, simple & unique design. i also enjoy crafting brand identities, icons, & ilustration work. </p>
-              <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is. The European languages are members of the same family.English person.</p>
+              <p class="p-heading">I'm an industry relationship manager, educator and innovator who builds connections between IT industry and students. I also enjoy crafting innovation in teaching and learning with our students.</p>
+              <p class="separator">My experience is communication, planning and delivery to students and industry. I have experience with data analysis and analytics and business analysis with student training and the Gig - our work environment platform.</p>
 
             </div>
 
@@ -122,7 +103,7 @@
       </div>
     </div><!-- End About Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Expertise Section ======= -->
     <div id="services">
       <div class="container">
 
@@ -132,31 +113,15 @@
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-briefcase"></i>
-                <span>UI/UX DESIGN</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <span>BUSINESS ANALYSIS</span>
+                <p class="separator">Teaching and applying business analysis to case studies and clients within a teachining and work environment (The Gig).</p>
               </div>
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-card-checklist"></i>
-                <span>BRAND IDENTITY</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="services-block">
-                <i class="bi bi-bar-chart"></i>
-                <span>WEB DESIGN</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="services-block">
-                <i class="bi bi-binoculars"></i>
-                <span>MOBILE APPS</span>
+                <span>DATA ANALYSIS</span>
                 <p class="separator">To an English person, it will seem like simplified English,told me what </p>
               </div>
             </div><!-- End testimonial item -->
@@ -164,16 +129,24 @@
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-brightness-high"></i>
-                <span>Analytics</span>
+                <span>ANALYTICS</span>
                 <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+              </div>
+            </div><!-- End testimonial item -->
+			
+            <div class="swiper-slide">
+              <div class="services-block">
+                <i class="bi bi-bar-chart"></i>
+                <span>DATA WAREHOUSING</span>
+                <p class="separator">Planning, designing and implementation of data marts and data warehouse using Microsoft SSIS to create pipelines and data cleansing.</p>
               </div>
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-calendar4-week"></i>
-                <span>PHOTOGRAPHY</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <span>PLANNING</span>
+                <p class="separator">Planning and requirements analysis for teaching, development and delivery of courses and learning outcomes. Also for classroom (and The Gig) client projects using Agile Methodology techniques.</p>
               </div>
             </div><!-- End testimonial item -->
 
@@ -200,9 +173,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Educator</li>
+              <li data-filter=".filter-card">Business Analysis</li>
+              <li data-filter=".filter-web">Data Science</li>
             </ul>
           </div>
         </div>
@@ -275,12 +248,12 @@
 
     </div><!-- End Portfolio Section -->
 
-    <!-- ======= Journal Section ======= -->
-    <div id="journal" class="text-left paddsection">
+    <!-- ======= experience Section ======= -->
+    <div id="experience" class="text-left paddsection">
 
       <div class="container">
         <div class="section-title text-center">
-          <h2>journal</h2>
+          <h2>My Experience</h2>
         </div>
       </div>
 
@@ -295,10 +268,11 @@
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">SO LETS MAKE THE MOST IS BEAUTIFUL</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
+                  <h4><a href="blog-single.html">IT PROFESSIONAL</a></h4>
+                  <p class="separator">For 7 years I was an Analyst/Programmer in the IT department at University of Waikato.
                   </p>
-
+				  <p  class="separator">Dates: February 2000 to May 2007
+				  </p>
                 </div>
 
               </div>
@@ -311,8 +285,9 @@
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">WE'RE GONA MAKE DREAMS COMES</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
+                  <h4><a href="blog-single.html">EDUCATOR & INNOVATOR</a></h4>
+                  <p class="separator">I have ~20 years experience as an educator from while studying at University of Otago, Teaching Fellow at University of Otago, Senior Tutor at University of Waikato and my current position as Academic at Wintec.
+				  Dates: 1996 to 2000 and 2008 - now.
                   </p>
 
                 </div>
@@ -327,8 +302,8 @@
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">NEW LIFE CIVILIZATIONS TO BOLDLY</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
+                  <h4><a href="blog-single.html">INDUSTRY RELATIONSHIP MANAGER</a></h4>
+                  <p class="separator">I work with IT industry to support and manage student internships. Also work with a Tertiary Tech Alliance group within the Waikato, that works with industry and IT students.
                   </p>
 
                 </div>
@@ -342,73 +317,6 @@
 
     </div><!-- End Journal Section -->
 
-    <!-- ======= Contact Section ======= -->
-    <div id="contact" class="paddsection">
-      <div class="container">
-        <div class="contact-block1">
-          <div class="row">
-
-            <div class="col-lg-6">
-              <div class="contact-contact">
-
-                <h2 class="mb-30">GET IN TOUCH</h2>
-
-                <ul class="contact-details">
-                  <li><span>23 Main, Street</span></li>
-                  <li><span>New York, United States</span></li>
-                  <li><span>+88 01912704287</span></li>
-                  <li><span>example@example.com</span></li>
-                </ul>
-
-              </div>
-            </div>
-
-            <div class="col-lg-6">
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <div class="row gy-3">
-
-                  <div class="col-lg-6">
-                    <div class="form-group contact-block1">
-                      <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-12">
-                    <div class="form-group">
-                      <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-12">
-                    <div class="form-group">
-                      <textarea class="form-control" name="message" placeholder="Message" required></textarea>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-12">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-                  </div>
-
-                  <div class="mt-0">
-                    <input type="submit" class="btn btn-defeault btn-send" value="Send message">
-                  </div>
-
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div><!-- End Contact Section -->
-
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -417,10 +325,9 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-          <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://www.canva.com/design/DAGIMkujVrQ/fSAXsdQXqpKu0s0yz0V4Hw/view?utm_content=DAGIMkujVrQ&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank"><i class="bi bi-file-person-fill"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/suepearson-nz/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://github.com/suepearson-nz" target="_blank"><i class="bi bi-github"></i></a></li>		
         </ul>
 
       </div>
