--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <a href="index.html" class="logo"><img src="assets/img/avatar.png" alt="" class="img-fluid"></a>
       <!-- Uncomment below if you prefer to use an text logo -->
-      <!-- <h1 class="logo"><a href="index.html">Folio</a></h1> -->
+      <!-- <h1 class="logo"><a href="index.html">Sue Pearson's Portfolio</a></h1> -->
 
       <nav id="navbar" class="navbar">
         <ul>
