--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     <div class="container">
       <div class="hero-content">
         <h1>I'm <span class="typed" data-typed-items="Sue Pearson, an Educator, an Innovator, an Industry Relationship Manager, a Presenter"></span></h1>
-        <p>Educator, Innovator, Industry Relationship Manager, Presenter</p>
+	<p>Sue Pearson</p>
+	<p>Industry Relationship Manager, Presenter, Educator, Innovator</p>
 
         <ul class="list-unstyled list-social">
           <li><a href="https://www.canva.com/design/DAGIMkujVrQ/fSAXsdQXqpKu0s0yz0V4Hw/view?utm_content=DAGIMkujVrQ&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank"><i class="bi bi-file-person-fill"></i></a></li>
